<resources>
    <string name="app_name">mealrater</string>
    <string name="view_all">View All</string>
    <string name="name">Restaurant</string>
    <string name="surname">Dish</string>
    <string name="marks">Marks</string>
    <string name="add_data">Add Data</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="restaurant_id">Restaurant id</string>
    <string name="textview">Output</string>
    <string name="welcome_message">hello</string>
    <string name="rate_dish">rate dish</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="dish_id">Dish ID</string>
    <string name="dish_name">Dish Name</string>
    <string name="dish_type">Dish Type</string>

    <string name="my_rating_bar">Your Rating Bar Text Here</string>
    <string name="button2">Your Button Text Here</string>
    <string name="button4">Your Button Text Here</string>

</resources>