<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.RestaurantRater.MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dishoutput"
        android:layout_width="398dp"
        android:layout_height="103dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="343dp"
        android:layout_height="536dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_restaurant_id"
            android:layout_width="341dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:autofillHints="here"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/restaurant_id"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText_Address"
            android:layout_width="341dp"
            android:layout_height="80dp"
            android:autofillHints="here"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/street_address"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText_restaurant_name"
            android:layout_width="341dp"
            android:layout_height="80dp"
            android:autofillHints="here"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText_ZipCode"
            android:layout_width="341dp"
            android:layout_height="80dp"
            android:autofillHints="here"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/zip_code"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText_State"
            android:layout_width="341dp"
            android:layout_height="80dp"
            android:autofillHints="here"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/state"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editText_City"
            android:layout_width="341dp"
            android:layout_height="80dp"
            android:layout_marginBottom="1188dp"
            android:autofillHints="here"
            android:ems="20"
            android:inputType="textPersonName"
            android:text="@string/city"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="210dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/button_show_dish"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:autofillHints="here"
            android:text="@string/rate_dish"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/button_add_restaurant"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:autofillHints="here"
            android:text="@string/add_data"
            tools:ignore="LabelFor,TextFields" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
